--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/VcCUAUH2NAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
+    <div>
+        <img src="1.jpg">
+    </div>
 </body>
 </html>
